unpackaged/main/default/objects/Journey__c/fields/Accepted_By__c.field-meta.xml
<CustomField>
    <fullName>Accepted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accepted By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>JourneysAccepted</relationshipName>
    <type>Lookup</type>
</CustomField>