unpackaged/main/default/objects/Journey__c/fields/Accepted_By_Role__c.field-meta.xml
<CustomField>
    <fullName>Accepted_By_Role__c</fullName>
    <label>Accepted By Role</label>
    <length>80</length>
    <type>Text</type>
</CustomField>