unpackaged/main/default/objects/Journey__c/fields/Accepted_Month__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Month__c</fullName>
    <formula>DATE(YEAR(Accepted_Date__c),MONTH(Accepted_Date__c),1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accepted Month</label>
    <type>Date</type>
</CustomField>