unpackaged/main/default/objects/Journey__c/fields/Accepted_Week__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Week__c</fullName>
    <formula>CASE(MOD(Accepted_Date__c - DATE(1900, 1, 6), 7),
0, Accepted_Date__c + 0,
1, Accepted_Date__c + 6,
2, Accepted_Date__c + 5,
3, Accepted_Date__c + 4,
4, Accepted_Date__c + 3,
5, Accepted_Date__c + 2,
6, Accepted_Date__c + 1,
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accepted Week</label>
    <type>Date</type>
</CustomField>