unpackaged/main/default/objects/Journey__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Journeys</relationshipLabel>
    <relationshipName>Journeys</relationshipName>
    <type>Lookup</type>
</CustomField>