unpackaged/main/default/objects/Journey__c/fields/Actioned_At__c.field-meta.xml
<CustomField>
    <fullName>Actioned_At__c</fullName>
    <formula>IF(
  ISBLANK(Rejected_At__c),
    IF(
      ISBLANK(Approached_At__c),
        IF(
          ISBLANK(Meeting_Booked_At__c),
            IF(
              ISBLANK(Closed_At__c),
                NULL,
                Closed_At__c
            ),
          Meeting_Booked_At__c
        ),
      Approached_At__c
    ),
  Rejected_At__c
)</formula>
    <label>Actioned At</label>
    <type>DateTime</type>
</CustomField>