unpackaged/main/default/objects/Journey__c/fields/Added_to_Sequence_At__c.field-meta.xml
<CustomField>
    <fullName>Added_to_Sequence_At__c</fullName>
    <description>Date/Time field that is automatically from the Contact record when they are added to a new sequence.</description>
    <inlineHelpText>Date/Time field that is automatically from the Contact record when they are added to a new sequence.</inlineHelpText>
    <label>Added to Sequence At</label>
    <type>DateTime</type>
</CustomField>