unpackaged/main/default/objects/Journey__c/fields/AE_Assigned__c.field-meta.xml
<CustomField>
    <fullName>AE_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AE Assigned</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Team__c</field>
            <operation>equals</operation>
            <value>Account Executives, Sales Account Management, Marketing Demand Gen</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Journeys</relationshipName>
    <type>Lookup</type>
</CustomField>