unpackaged/main/default/objects/Journey__c/fields/AE_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>AE_Meeting_Date__c</fullName>
    <label>AE Meeting Date</label>
    <type>Date</type>
</CustomField>