unpackaged/main/default/objects/Journey__c/fields/Approached_At__c.field-meta.xml
<CustomField>
    <fullName>Approached_At__c</fullName>
    <label>Approached At</label>
    <type>DateTime</type>
</CustomField>