unpackaged/main/default/objects/Journey__c/fields/Approached_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Approached_Trigger__c</fullName>
    <label>Approached Trigger</label>
    <length>255</length>
    <type>Text</type>
</CustomField>