unpackaged/main/default/objects/Journey__c/fields/Campaign_Member_Status_at_Moment__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member_Status_at_Moment__c</fullName>
    <formula>Created_From_Moment__r.Campaign_Member_Status_at_Moment__c</formula>
    <label>Campaign Member Status at Moment</label>
    <type>Text</type>
</CustomField>