unpackaged/main/default/objects/Journey__c/fields/Close_Method__c.field-meta.xml
<CustomField>
    <fullName>Close_Method__c</fullName>
    <label>Close Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>