unpackaged/main/default/objects/Journey__c/fields/Closed_Type__c.field-meta.xml
<CustomField>
    <fullName>Closed_Type__c</fullName>
    <formula>CASE(  Stage__c ,
&quot;Rejected&quot;, &quot;Rejected&quot;,
&quot;Converted&quot;, &quot;Won&quot;,
&quot;Ended&quot;, 



CASE( Ended_Reason__c ,
&quot;Auto-Closed&quot;, &quot;Lost&quot;,
&quot;Converted Other Journey&quot;, &quot;Stopped&quot;,
&quot;Do Not Contact&quot;, &quot;Lost&quot;,
&quot;Email Objection&quot;, &quot;Lost&quot;,
&quot;No Response&quot;, &quot;Lost&quot;,
&quot;Passed to Docs/Community&quot;, &quot;Stopped&quot;,
&quot;Passed to Support&quot;, &quot;Stopped&quot;,
&quot;Referred to Other Contact&quot;, &quot;Stopped&quot;,
&quot;Passed to ProServ&quot;, &quot;Stopped&quot;,
&quot;Passed to Partnerships&quot;, &quot;Stopped&quot;,
&quot;Unknown&quot;)

, &quot;&quot;)</formula>
    <label>Closed Type</label>
    <type>Text</type>
</CustomField>