unpackaged/main/default/objects/Journey__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Conversions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>