unpackaged/main/default/objects/Journey__c/fields/Country_Definition_at_Creation__c.field-meta.xml
<CustomField>
    <fullName>Country_Definition_at_Creation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country Definition at Creation</label>
    <referenceTo>Country_Definition__c</referenceTo>
    <relationshipLabel>JourneysCreated</relationshipLabel>
    <relationshipName>JourneysCreation</relationshipName>
    <type>Lookup</type>
</CustomField>