unpackaged/main/default/objects/Journey__c/fields/CP_Router__c.field-meta.xml
<CustomField>
    <fullName>CP_Router__c</fullName>
    <label>CP Router</label>
    <length>255</length>
    <type>Text</type>
</CustomField>