unpackaged/main/default/objects/Journey__c/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <formula>DATEVALUE(Created_At__c)</formula>
    <label>Started Date</label>
    <type>Date</type>
</CustomField>