unpackaged/main/default/objects/Journey__c/fields/Created_From_Moment__c.field-meta.xml
<CustomField>
    <fullName>Created_From_Moment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Created From Moment</label>
    <referenceTo>Moment__c</referenceTo>
    <relationshipLabel>Journeys Created</relationshipLabel>
    <relationshipName>JourneysCreated</relationshipName>
    <type>Lookup</type>
</CustomField>