unpackaged/main/default/objects/Journey__c/fields/Created_Month__c.field-meta.xml
<CustomField>
    <fullName>Created_Month__c</fullName>
    <formula>DATE(YEAR(Created_Date__c),MONTH(Created_Date__c),1)</formula>
    <label>Created Month</label>
    <type>Date</type>
</CustomField>