unpackaged/main/default/objects/Journey__c/fields/Created_Week__c.field-meta.xml
<CustomField>
    <fullName>Created_Week__c</fullName>
    <formula>CASE(MOD(Created_Date__c - DATE(1900, 1, 6), 7),
0, Created_Date__c + 0,
1, Created_Date__c + 6,
2, Created_Date__c + 5,
3, Created_Date__c + 4,
4, Created_Date__c + 3,
5, Created_Date__c + 2,
6, Created_Date__c + 1,
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Week</label>
    <type>Date</type>
</CustomField>