unpackaged/main/default/objects/Journey__c/fields/Current_Active_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Current_Active_Sequence__c</fullName>
    <formula>IF(Is_Closed__c = FALSE &amp;&amp; Contact__r.Outreach_Current_Sequence_Task_Due_Date__c &gt;= Created_At__c,  Contact__r.Outreach_Current_Sequence_Name__c , &quot;&quot;)</formula>
    <label>Current Active Sequence</label>
    <type>Text</type>
</CustomField>