unpackaged/main/default/objects/Journey__c/fields/Current_Active_Sequence_Stamped__c.field-meta.xml
<CustomField>
    <fullName>Current_Active_Sequence_Stamped__c</fullName>
    <label>Current Active Sequence (Stamped)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>