unpackaged/main/default/objects/Journey__c/fields/Current_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Current_Date_Time__c</fullName>
    <formula>NOW()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Date/Time</label>
    <type>DateTime</type>
</CustomField>