unpackaged/main/default/objects/Journey__c/fields/Current_Outreach_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Outreach_Due_Date__c</fullName>
    <formula>IF(  TEXT(Status__c ) = &quot;Open&quot;,  Contact__r.Outreach_Current_Sequence_Task_Due_Date__c , NULL)</formula>
    <label>Current Outreach Due Date</label>
    <type>Date</type>
</CustomField>