unpackaged/main/default/objects/Journey__c/fields/Days_Since_Most_Recent_Outbound_Email__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Most_Recent_Outbound_Email__c</fullName>
    <formula>TODAY() - DATEVALUE(Most_Recent_Outbound_Email__c)</formula>
    <label>Days Since Most Recent Outbound Email</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>