unpackaged/main/default/objects/Journey__c/fields/Days_to_Qualification_Decision__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Qualification_Decision__c</fullName>
    <formula>IF(
  ISPICKVAL(Stage__c,&quot;Converted&quot;) &amp;&amp; NOT(ISBLANK(Opportunity__c)) &amp;&amp; NOT(ISBLANK(AE_Meeting_Date__c)),
  CASE(Opportunity__r.StageName,
    &quot;Closed Lost&quot;,Opportunity__r.CloseDate - AE_Meeting_Date__c,
    &quot;(1) Qualification&quot;,TODAY() - AE_Meeting_Date__c,
    Opportunity__r.Sales_Qualified_At__c - AE_Meeting_Date__c
  ),
  NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Qualification Decision</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>