unpackaged/main/default/objects/Journey__c/fields/Ended_Reason__c.field-meta.xml
<CustomField>
    <fullName>Ended_Reason__c</fullName>
    <label>Ended Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Auto-Closed</fullName>
            </value>
            <value>
                <fullName>Bad Contact Info</fullName>
            </value>
            <value>
                <fullName>Converted Other Journey</fullName>
            </value>
            <value>
                <fullName>Do Not Contact</fullName>
            </value>
            <value>
                <fullName>Email Objection</fullName>
            </value>
            <value>
                <fullName>Meeting Not Progressing</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>Passed to Docs/Community</fullName>
            </value>
            <value>
                <fullName>Passed to Partnerships</fullName>
            </value>
            <value>
                <fullName>Passed to ProServ</fullName>
            </value>
            <value>
                <fullName>Passed to Support</fullName>
            </value>
            <value>
                <fullName>Qual: No Authority</fullName>
                <isActive>false</isActive>
                <label>Qual: No Authority</label>
            </value>
            <value>
                <fullName>Qual: No Timing</fullName>
                <isActive>false</isActive>
                <label>Qual: No Timing</label>
            </value>
            <value>
                <fullName>Qual: No Use Case</fullName>
                <isActive>false</isActive>
                <label>Qual: No Use Case</label>
            </value>
            <value>
                <fullName>Referred to Other Contact</fullName>
            </value>
            <value>
                <fullName>Requested Later Follow-up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>