unpackaged/main/default/objects/Journey__c/fields/Ended_Reason_Details__c.field-meta.xml
<CustomField>
    <fullName>Ended_Reason_Details__c</fullName>
    <label>Ended Reason Details</label>
    <type>TextArea</type>
</CustomField>