unpackaged/main/default/objects/Journey__c/fields/Engaged_At__c.field-meta.xml
<CustomField>
    <fullName>Engaged_At__c</fullName>
    <label>Engaged At</label>
    <type>DateTime</type>
</CustomField>