unpackaged/main/default/objects/Journey__c/fields/Engaged_Date__c.field-meta.xml
<CustomField>
    <fullName>Engaged_Date__c</fullName>
    <formula>DATEVALUE( Engaged_At__c )</formula>
    <label>Engaged Date</label>
    <type>Date</type>
</CustomField>