unpackaged/main/default/objects/Journey__c/fields/Engaged_Month__c.field-meta.xml
<CustomField>
    <fullName>Engaged_Month__c</fullName>
    <formula>DATE(YEAR(Engaged_Date__c),MONTH(Engaged_Date__c),1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engaged Month</label>
    <type>Date</type>
</CustomField>