unpackaged/main/default/objects/Journey__c/fields/Engaged_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Engaged_Trigger__c</fullName>
    <label>Engaged Trigger</label>
    <length>255</length>
    <type>Text</type>
</CustomField>