unpackaged/main/default/objects/Journey__c/fields/Engaged_Week__c.field-meta.xml
<CustomField>
    <fullName>Engaged_Week__c</fullName>
    <formula>CASE(MOD(Engaged_Date__c - DATE(1900, 1, 6), 7),
0, Engaged_Date__c + 0,
1, Engaged_Date__c + 6,
2, Engaged_Date__c + 5,
3, Engaged_Date__c + 4,
4, Engaged_Date__c + 3,
5, Engaged_Date__c + 2,
6, Engaged_Date__c + 1,
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engaged Week</label>
    <type>Date</type>
</CustomField>