unpackaged/main/default/objects/Journey__c/fields/Fast_Pass_Reason__c.field-meta.xml
<CustomField>
    <fullName>Fast_Pass_Reason__c</fullName>
    <label>Fast Pass Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Meeting booked by Director+</fullName>
            </value>
            <value>
                <fullName>Director+ invited to meeting</fullName>
            </value>
            <value>
                <fullName>Meeting booked by Engineering Manager+</fullName>
            </value>
            <value>
                <fullName>Engineering Manager+ invited to meeting</fullName>
            </value>
            <value>
                <fullName>Instructed to by sales leadership</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>