unpackaged/main/default/objects/Journey__c/fields/Fast_Pass_Reason_Details__c.field-meta.xml
<CustomField>
    <fullName>Fast_Pass_Reason_Details__c</fullName>
    <label>Fast Pass Reason Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>