unpackaged/main/default/objects/Journey__c/fields/First_Call_Run_By__c.field-meta.xml
<CustomField>
    <fullName>First_Call_Run_By__c</fullName>
    <description>Indicates who ran the first qualification call.</description>
    <inlineHelpText>Indicates who ran the first qualification call.</inlineHelpText>
    <label>First Call Run By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SDR only</fullName>
            </value>
            <value>
                <fullName>SDR and AE</fullName>
            </value>
            <value>
                <fullName>AE only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>