unpackaged/main/default/objects/Journey__c/fields/First_Inbound_Activity__c.field-meta.xml
<CustomField>
    <fullName>First_Inbound_Activity__c</fullName>
    <description>Timestamp of the first Email and LinkedIn response received.</description>
    <inlineHelpText>Timestamp of the first Email and LinkedIn response received.</inlineHelpText>
    <label>First Inbound Activity</label>
    <type>DateTime</type>
</CustomField>