unpackaged/main/default/objects/Journey__c/fields/First_Inbound_Email__c.field-meta.xml
<CustomField>
    <fullName>First_Inbound_Email__c</fullName>
    <label>First Inbound Email</label>
    <type>DateTime</type>
</CustomField>