unpackaged/main/default/objects/Journey__c/fields/First_Outbound_Email__c.field-meta.xml
<CustomField>
    <fullName>First_Outbound_Email__c</fullName>
    <label>First Outbound Email</label>
    <type>DateTime</type>
</CustomField>