unpackaged/main/default/objects/Journey__c/fields/I_am_Journey_Owner__c.field-meta.xml
<CustomField>
    <fullName>I_am_Journey_Owner__c</fullName>
    <formula>$User.Id=OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>I Am Journey Owner?</label>
    <type>Checkbox</type>
</CustomField>