unpackaged/main/default/objects/Journey__c/fields/Identified_At__c.field-meta.xml
<CustomField>
    <fullName>Identified_At__c</fullName>
    <label>Identified At</label>
    <type>DateTime</type>
</CustomField>