unpackaged/main/default/objects/Journey__c/fields/Identified_Date__c.field-meta.xml
<CustomField>
    <fullName>Identified_Date__c</fullName>
    <formula>DATEVALUE(Identified_At__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Identified Date</label>
    <type>Date</type>
</CustomField>