unpackaged/main/default/objects/Journey__c/fields/Identified_Month__c.field-meta.xml
<CustomField>
    <fullName>Identified_Month__c</fullName>
    <formula>DATE(YEAR(Identified_Date__c),MONTH(Identified_Date__c),1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Identified Month</label>
    <type>Date</type>
</CustomField>