unpackaged/main/default/objects/Journey__c/fields/Identified_Week__c.field-meta.xml
<CustomField>
    <fullName>Identified_Week__c</fullName>
    <formula>CASE(MOD(Identified_Date__c - DATE(1900, 1, 6), 7),
0, Identified_Date__c + 0,
1, Identified_Date__c + 6,
2, Identified_Date__c + 5,
3, Identified_Date__c + 4,
4, Identified_Date__c + 3,
5, Identified_Date__c + 2,
6, Identified_Date__c + 1,
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Identified Week</label>
    <type>Date</type>
</CustomField>