unpackaged/main/default/objects/Journey__c/fields/Is_Closed__c.field-meta.xml
<CustomField>
    <fullName>Is_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Closed?</label>
    <type>Checkbox</type>
</CustomField>