unpackaged/main/default/objects/Journey__c/fields/Is_MQL__c.field-meta.xml
<CustomField>
    <fullName>Is_MQL__c</fullName>
    <formula>Created_From_Moment__r.Is_MQL__c</formula>
    <label>Is MQL</label>
    <type>Checkbox</type>
</CustomField>