unpackaged/main/default/objects/Journey__c/fields/Is_Opp_Won__c.field-meta.xml
<CustomField>
    <fullName>Is_Opp_Won__c</fullName>
    <formula>Opportunity__r.IsWon</formula>
    <label>Is Opp Won?</label>
    <type>Checkbox</type>
</CustomField>