unpackaged/main/default/objects/Journey__c/fields/Is_Resting__c.field-meta.xml
<CustomField>
    <fullName>Is_Resting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Resting?</label>
    <type>Checkbox</type>
</CustomField>