unpackaged/main/default/objects/Journey__c/fields/Is_SAL__c.field-meta.xml
<CustomField>
    <fullName>Is_SAL__c</fullName>
    <formula>OR(
NOT(ISBLANK(  Accepted_At__c )),
NOT(ISBLANK(   Approached_At__c  )),
NOT(ISBLANK(   Engaged_At__c  )),
NOT(ISBLANK(   Meeting_Booked_At__c ))
)</formula>
    <label>Is SAL?</label>
    <type>Checkbox</type>
</CustomField>