unpackaged/main/default/objects/Journey__c/fields/Is_Self_Service__c.field-meta.xml
<CustomField>
    <fullName>Is_Self_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked TRUE if the related Contact was a Retool User at an active Self Service Retool Org.</description>
    <inlineHelpText>Checked TRUE if the related Contact was a Retool User at an active Self Service Retool Org.</inlineHelpText>
    <label>Is Self Service?</label>
    <type>Checkbox</type>
</CustomField>