unpackaged/main/default/objects/Journey__c/fields/Is_SQL__c.field-meta.xml
<CustomField>
    <fullName>Is_SQL__c</fullName>
    <formula>IF( TEXT( Stage__c ) = &quot;Converted&quot;, TRUE, FALSE)</formula>
    <label>Is SQL?</label>
    <type>Checkbox</type>
</CustomField>