unpackaged/main/default/objects/Journey__c/fields/Is_SQL_Action_Needed__c.field-meta.xml
<CustomField>
    <fullName>Is_SQL_Action_Needed__c</fullName>
    <formula>AND(  Opportunity__r.IsClosed = FALSE,  ISBLANK(Opportunity__r.Sales_Qualified_At__c ) )</formula>
    <label>Is SQL Action Needed?</label>
    <type>Checkbox</type>
</CustomField>