unpackaged/main/default/objects/Journey__c/fields/Is_SQO__c.field-meta.xml
<CustomField>
    <fullName>Is_SQO__c</fullName>
    <formula>Opportunity__r.Sales_Qualified_Opportunity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is SQO?</label>
    <type>Checkbox</type>
</CustomField>