unpackaged/main/default/objects/Journey__c/fields/Journey_Category__c.field-meta.xml
<CustomField>
    <fullName>Journey_Category__c</fullName>
    <formula>CASE( Journey_Subtype__c ,
&quot;Other Journey&quot;, &quot;Other&quot;,
&quot;Other Meeting&quot;, &quot;Other&quot;,
&quot;Demo Request&quot;, &quot;Demo Request&quot;,
&quot;Demo Request (Non-MQL)&quot;, &quot;Demo Request&quot;,
&quot;Support&quot;, &quot;Demo Request&quot;,
&quot;Endgame&quot;, &quot;Product&quot;,
&quot;Product Action&quot;, &quot;Product&quot;,
&quot;Product Signup&quot;, &quot;Product&quot;,
&quot;Outbound Sequence&quot;, &quot;Sales&quot;,
&quot;Regie.ai&quot;,&quot;Sales&quot;,
&quot;Content&quot;, &quot;Content&quot;,
&quot;Event&quot;, &quot;Event&quot;,
&quot;Other Marketing&quot;)</formula>
    <label>Journey Category</label>
    <type>Text</type>
</CustomField>