unpackaged/main/default/objects/Journey__c/fields/Journey_Link__c.field-meta.xml
<CustomField>
    <fullName>Journey_Link__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id,  Name, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Journey Link</label>
    <type>Text</type>
</CustomField>