unpackaged/main/default/objects/Journey__c/fields/Journey_Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Journey_Subcategory__c</fullName>
    <description>Journey Subcategory derived from associated Moment, or Outbound Sequence flag. Formerly Journey Subtype formula field.</description>
    <inlineHelpText>Journey Subcategory derived from associated Moment, or Outbound Sequence flag. Formerly Journey Subtype formula field.</inlineHelpText>
    <label>Journey Subcategory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Demo Request</fullName>
            </value>
            <value>
                <fullName>Demo Request (Non-MQL)</fullName>
            </value>
            <value>
                <fullName>Meeting Maker (Incentivized Demo)</fullName>
            </value>
            <value>
                <fullName>Product Signup</fullName>
            </value>
            <value>
                <fullName>Product Action</fullName>
            </value>
            <value>
                <fullName>Content</fullName>
            </value>
            <value>
                <fullName>Koala</fullName>
            </value>
            <value>
                <fullName>Champify</fullName>
            </value>
            <value>
                <fullName>Partner Referral</fullName>
            </value>
            <value>
                <fullName>Support Handoff</fullName>
            </value>
            <value>
                <fullName>Regie.ai</fullName>
            </value>
            <value>
                <fullName>Live Event</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Outbound Sequence</fullName>
            </value>
            <value>
                <fullName>Contact Engineering</fullName>
            </value>
            <value>
                <fullName>Contact Sales</fullName>
            </value>
            <value>
                <fullName>Prospect Re-Engagement</fullName>
            </value>
            <value>
                <fullName>AE Re-Engagement</fullName>
            </value>
            <value>
                <fullName>SDR Re-Engagement</fullName>
            </value>
            <value>
                <fullName>Other Journey</fullName>
            </value>
            <value>
                <fullName>Other Meeting</fullName>
            </value>
            <value>
                <fullName>Endgame</fullName>
                <isActive>false</isActive>
                <label>Endgame</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>