unpackaged/main/default/objects/Journey__c/fields/Journey_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Journey_Subtype__c</fullName>
    <formula>IF(NOT(ISPICKVAL(Created_From_Moment__r.Moment_Type__c,&quot;&quot;)), 

CASE(Created_From_Moment__r.Moment_Type__c, 

&quot;Demo Request&quot;, IF(Created_From_Moment__r.Is_MQL__c = TRUE, &quot;Demo Request&quot;, &quot;Demo Request (Non-MQL)&quot;),
&quot;Product Signup&quot;, &quot;Product Signup&quot;,
&quot;Product Action&quot;, &quot;Product Action&quot;,
&quot;Content Download&quot;, &quot;Content&quot;,
&quot;Form Submission&quot;, &quot;Content&quot;, 
&quot;Koala Intent Signal&quot;, &quot;Koala&quot;,
&quot;Champify Alert&quot;, &quot;Champify&quot;,
&quot;Partner Referral&quot;, &quot;Partner&quot;, 
&quot;Support&quot;, &quot;Support&quot;,
&quot;Regie.ai - Conversion&quot;, &quot;Regie.ai&quot;,
&quot;Event&quot;
),

IF( Outbound_Sequence__c = TRUE, &quot;Outbound Sequence&quot;, 
  IF( ISBLANK(Meeting_Booked_At__c), &quot;Other Journey&quot;, 
&quot;Other Meeting&quot; )
    )
 )</formula>
    <label>Journey Subtype</label>
    <type>Text</type>
</CustomField>