unpackaged/main/default/objects/Journey__c/fields/Journey_Summary__c.field-meta.xml
<CustomField>
    <fullName>Journey_Summary__c</fullName>
    <formula>TEXT(Stage__c) + &quot; - &quot; + CASE(Stage__c, 
  &#39;Rejected&#39;, TEXT(Rejected_Reason__c), 
  &#39;Ended&#39;, TEXT(Ended_Reason__c), 
  &#39;Converted&#39;, &#39;Opp Stage: &#39; + TEXT(Opportunity__r.StageName),
  Action_Required__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Journey Summary</label>
    <type>Text</type>
</CustomField>