unpackaged/main/default/objects/Journey__c/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <formula>HYPERLINK(&#39;https://retool.lightning.force.com/lightning/r/Journey__c/&#39; + Id + &#39;/view&#39;, &#39;Link&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link</label>
    <type>Text</type>
</CustomField>