unpackaged/main/default/objects/Journey__c/fields/Lost_From_Stage__c.field-meta.xml
<CustomField>
    <fullName>Lost_From_Stage__c</fullName>
    <formula>IF(  Is_Closed__c = TRUE, 

IF( NOT(ISBLANK( Meeting_Booked_At__c )), &quot;Meeting Booked&quot;,
IF( NOT(ISBLANK(  Engaged_At__c )), &quot;Engaged&quot;,
IF( NOT(ISBLANK(  Approached_At__c )), &quot;Approached&quot;,
IF( NOT(ISBLANK(  Accepted_At__c )), &quot;Accepted&quot;,
IF( NOT(ISBLANK(  Identified_At__c )), &quot;Identified&quot;, &quot;Unknown&quot;
))))),






&quot;&quot; )</formula>
    <label>Lost From Stage</label>
    <type>Text</type>
</CustomField>