unpackaged/main/default/objects/Journey__c/fields/Meeting_Booked_At__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Booked_At__c</fullName>
    <label>Qual Meeting Booked At</label>
    <type>DateTime</type>
</CustomField>