unpackaged/main/default/objects/Journey__c/fields/Meeting_Booked_With__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Booked_With__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Qual Meeting Booked With</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MeetingsBookedWith</relationshipName>
    <type>Lookup</type>
</CustomField>