unpackaged/main/default/objects/Journey__c/fields/Meeting_Booked_With_Role__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Booked_With_Role__c</fullName>
    <label>Qual Meeting Booked With Role</label>
    <length>80</length>
    <type>Text</type>
</CustomField>